vlib/v/checker/tests/map_lambda_void_return_err.vv
arr := ['a', 'b', 'c']
arr.map(|x| println(x))
